<resources>
    <string name="app_name">Work_test_project</string>
    <string name="main">Главная</string>
    <string name="favorite">Избранное</string>
    <string name="profile">Профиль</string>
    <string name="registration">Регистрация</string>
    <string name="authorization">Вход</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="emailHint">example@gmail.com</string>
    <string name="passwordHint">Введите пароль</string>
    <string name="repeatPasswordHint">Введите пароль ещё раз</string>
    <string name="alreadyHaveAccount">Уже есть аккаунт?</string>
    <string name="enter">" Войти"</string>
    <string name="noAccount">"Нет аккаунта? "</string>
    <string name="forgotPassword">Забыл пароль?</string>
    <string name="details">Подробнее -></string>
    <string name="searchPlug">Search courses...</string>
    <string name="dateFilter">"По дате добавления "</string>
    <string name="author">Автор</string>
    <string name="startCourse">Начать курс</string>
    <string name="goToPlatform">Перейти на платформу</string>
    <string name="aboutTitle">О курсе</string>
    <string name="support">Написать в поддержку</string>
    <string name="options">Настройки</string>
    <string name="leaveAccount">Выйти из аккаунта</string>
    <string name="yourCourses">Ваши курсы</string>
    <string name="onButtonClick">ButtonClicked</string>
    <string name="testDescriptionPlug">У вас будет 7 видеоуроков в высоком качестве. На них спикер объясняет теорию и показывает как выполнять практические задания. Доступ к материалам сохраняется на 2 года
Кроме теоретических материалов вас ждут тесты и практические задания. Они помогут лучше запомнить новую информацию и прокачать навыки, которые необходимы для реальной работы с RabbitMQ.
</string>
</resources>