<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <TextView
        android:id="@+id/title"
        style="@style/maxHeaderText"
        android:text="@string/registration"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/emailTitle"
        style="@style/normalText"
        android:text="@string/email"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="@dimen/enteringMaxMargin"/>

    <EditText
        android:id="@+id/emailInputField"
        style="@style/editTextStyle"
        android:hint="@string/emailHint"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTitle"
        />

    <TextView
        android:id="@+id/passwordTitle"
        style="@style/normalText"
        android:text="@string/passwordHint"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInputField"
        android:layout_marginTop="@dimen/basicEditTextMargin"/>

    <EditText
        android:id="@+id/passwordInputField"
        style="@style/editTextStyle"
        android:hint="@string/password"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTitle"
        />

    <TextView
        android:id="@+id/repeatPasswordTitle"
        style="@style/normalText"
        android:text="@string/repeatPassword"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInputField"
        android:layout_marginTop="@dimen/basicEditTextMargin"/>

    <EditText
        android:id="@+id/repeatPasswordInputField"
        style="@style/editTextStyle"
        android:hint="@string/repeatPasswordHint"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeatPasswordTitle"
        />

    <Button
        android:id="@+id/registrationButton"
        style="@style/registrationButton"
        android:text="@string/registration"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeatPasswordInputField"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/questionTitle"
        style="@style/smallText"
        android:text="@string/alreadyHaveAccount"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registrationButton"
        android:layout_marginTop="@dimen/basicTextMargin"
        />

    <TextView
        android:id="@+id/enterLink"
        style="@style/smallText"
        android:text="@string/enter"

        android:textColor="@color/green"
        app:layout_constraintStart_toEndOf="@id/questionTitle"
        app:layout_constraintTop_toBottomOf="@id/registrationButton"
        android:layout_marginTop="@dimen/basicTextMargin"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterLink"
        android:layout_marginStart="@dimen/basicButtonMargin"
        android:layout_marginEnd="@dimen/basicButtonMargin"
        android:layout_marginTop="32dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>