<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:src="@drawable/photo_placeholder"
        android:scaleType="centerCrop"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/favoriteButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:scaleType="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_favorites_24"
        android:tint="@color/darkGray"
        android:background="@drawable/bg_round_white"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="@dimen/basicEditTextMargin"
        />

    <ImageView
        android:id="@+id/leaveButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:scaleType="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_arrow_left"
        android:tint="@color/darkGray"
        android:background="@drawable/bg_round_white"
        android:layout_marginTop="56dp"
        android:layout_marginStart="@dimen/basicEditTextMargin"
        />

    <LinearLayout
        android:id="@+id/rateIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/previewImage"
        android:background="@drawable/bg_blur_16"
        android:layout_marginStart="@dimen/minMargin"
        android:layout_marginBottom="@dimen/minMargin"
        >

        <ImageView
            android:id="@+id/rateStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_12"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="4dp"
            />

        <TextView
            android:id="@+id/rateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.9"
            android:layout_marginEnd="6dp"
            android:textColor="@color/darkerWhite"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/publishedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/darkerWhite"
        android:text="22 Мая 2024"
        android:gravity="center"
        android:background="@drawable/bg_blur_16"

        app:layout_constraintStart_toEndOf="@id/rateIcon"
        app:layout_constraintBottom_toBottomOf="@id/previewImage"
        android:layout_marginBottom="@dimen/minMargin"
        android:layout_marginStart="4dp"
        android:paddingStart="@dimen/smallPadding"
        android:paddingEnd="@dimen/smallPadding"
        />

    <TextView
        android:id="@+id/title"
        style="@style/maxHeaderText"
        android:text="@string/authorization"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/previewImage"
        android:layout_marginTop="@dimen/basicTextMargin"
        />
    
    <ImageView
        android:id="@+id/academyLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_placeholder_45"
        android:background="@drawable/bg_round_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/basicTextMargin"/>

    <TextView
        android:id="@+id/authTitle"
        style="@style/smallTextGray"
        android:layout_width="wrap_content"
        android:text="@string/author"
        app:layout_constraintStart_toEndOf="@id/academyLogo"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"/>
    
    <TextView
        android:id="@+id/academyName"
        style="@style/normalText"
        android:textColor="@color/darkerWhite"
        android:text="Merion Academy"
        app:layout_constraintStart_toEndOf="@id/academyLogo"
        app:layout_constraintTop_toBottomOf="@id/authTitle"
        android:layout_marginStart="12dp"/>

    <Button
        android:id="@+id/startButton"
        style="@style/registrationButton"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/academyLogo"
        android:layout_marginTop="32dp"
        android:text="@string/startCourse"/>

    <Button
        android:id="@+id/platformButton"
        style="@style/registrationButton"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton"
        android:backgroundTint="@color/darkGray"
        android:layout_marginTop="@dimen/minMargin"
        android:text="@string/goToPlatform"/>

    <TextView
        android:id="@+id/descriptionTitle"
        style="@style/maxHeaderText"
        android:text="@string/aboutTitle"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/platformButton"
        android:layout_marginTop="@dimen/basicTextMargin"
        />

    <TextView
        android:id="@+id/description"
        style="@style/smallTextGray"
        android:text="@string/testDescriptionPlug"
        app:layout_constraintStart_toEndOf="@id/academyLogo"
        app:layout_constraintTop_toBottomOf="@id/descriptionTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:lineSpacingExtra="8dp"
        android:ellipsize="end"
        android:layout_marginStart="@dimen/basicTextMargin"
        android:layout_marginEnd="@dimen/basicTextMargin"
        android:layout_marginBottom="@dimen/minMargin"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>