<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/black">

    <TextView
        android:id="@+id/profileTitle"
        style="@style/maxHeaderText"
        android:text="@string/profile"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/basicTextMargin"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/optionsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_options_container"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileTitle"
        android:layout_marginStart="@dimen/basicTextMargin"
        android:layout_marginEnd="@dimen/basicTextMargin"
        android:layout_marginTop="@dimen/basicTextMargin"
        >
        <TextView
            android:id="@+id/support"
            style="@style/itemSearchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="@dimen/smallPadding"
            android:paddingStart="@dimen/normalPadding"/>
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="@dimen/smallPadding"
            android:paddingEnd="@dimen/middlePadding"/>

        <View
            android:id="@+id/divideLineOne"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/support"
            android:layout_marginStart="@dimen/basicButtonMargin"
            android:layout_marginEnd="@dimen/basicButtonMargin"
            android:layout_marginTop="@dimen/optionsTopMargin"/>

        <TextView
            android:id="@+id/options"
            style="@style/itemSearchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/options"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/divideLineOne"
            android:paddingTop="@dimen/smallPadding"
            android:paddingStart="@dimen/normalPadding"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/divideLineOne"
            android:paddingTop="@dimen/smallPadding"
            android:paddingEnd="@dimen/middlePadding"/>

        <View
            android:id="@+id/divideLineSecond"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/options"
            android:layout_marginStart="@dimen/basicButtonMargin"
            android:layout_marginEnd="@dimen/basicButtonMargin"
            android:layout_marginTop="@dimen/optionsTopMargin"/>

        <TextView
            android:id="@+id/leaveAccount"
            style="@style/itemSearchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leaveAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/divideLineSecond"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingTop="@dimen/smallPadding"
            android:paddingStart="@dimen/normalPadding"
            android:paddingBottom="@dimen/smallPadding"/>
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/divideLineSecond"
            android:paddingTop="@dimen/smallPadding"
            android:paddingEnd="@dimen/middlePadding"
            android:paddingBottom="@dimen/smallPadding"
            />

            
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/coursesTitle"
        style="@style/maxHeaderText"
        android:text="@string/yourCourses"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionsContainer"
        android:layout_marginTop="32dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coursesTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/basicTextMargin"
        android:layout_marginStart="@dimen/basicTextMargin"
        android:layout_marginEnd="@dimen/basicTextMargin"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>